Nav-Links Alignment fixed

--- a/Client/css/custom.css
+++ b/Client/css/custom.css
@@ -1,14 +1,17 @@
 /* index.html css */
 
-.amdt-nav-bar {
-    margin-left: 40%;
-    
-  }
+.amdt-nav-brand {
+  padding-top: 20px;
+}
 
-  .amdt-nav-text{
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-    text-decoration: none;
-    font-weight: 300;
-    letter-spacing: 0px;
-  }
+.amdt-nav-bar {
+  padding-top: 20px;
+}
+.amdt-nav-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #1a1a1a;
+  text-decoration: none;
+  font-weight: 450;
+  letter-spacing: 0px;
+}
